<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BreedsFragment">

    <TextView
        style="@style/title_bar"
        android:id="@+id/title_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/table"
        android:text="@string/current_metrics"
        tools:context=".MainActivity" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16sp">

        <TableRow style="@style/metricRow">
            <TextView
                style="@style/metricLabel"
                android:text="@string/current_device_name" />
            <TextView
                android:id="@+id/txtDeviceName"
                style="@style/metricValue"
                android:text="@string/unknown" />
        </TableRow>

        <TableRow style="@style/metricRow">
            <TextView
                style="@style/metricLabel"
                android:text="@string/current_os_name" />
            <TextView
                android:id="@+id/txtOSName"
                style="@style/metricValue"
                android:text="@string/unknown" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>